<resources>
    <string name="app_name">Joker App</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_joker_day">piada do dia</string>
    <string name="menu_about">sobre</string>
    <string name="social">social</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_description">Carlos Ray \"Chuck\" Norris (Ryan, 10 de março de 1940) é um artista marcial, ator, produtor de cinema, argumentista estadounidense. Depois de servir na Força Aérea dos Estados Unidos, começou a tornar-se conhecido como praticante de artes marciais. Em 1990, fundou a sua escola de artes marciais, Chun Kuk Do, e em 2005, a World Combat League (WCL), uma competição de combate por equipes.</string>
    <string name="link">https://pt.wikipedia.org/wiki/Chuck_Norris</string>
    <string name="build_version">Versão(%1$s)</string>
</resources>