<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home"
    android:id="@+id/navigation">
    <fragment
        android:id="@+id/nav_home"
        android:label="@string/menu_home"
        android:name="com.example.jokerapp.view.HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_joke"
            app:destination="@id/nav_joke" />
    </fragment>
    <fragment
        android:id="@+id/nav_joke_day"
        android:label="@string/menu_joker_day"
        android:name="com.example.jokerapp.view.JokeDayFragment"
        xmlns:tools="http://schemas.android.com/tools"
        tools:layout="@layout/fragment_joke_day"/>
    <fragment
        android:id="@+id/nav_joke"
        android:label="@string/menu_joker_day"
        android:name="com.example.jokerapp.view.JokerFragment"
        xmlns:tools="http://schemas.android.com/tools"
        tools:layout="@layout/fragment_joker"/>
    <fragment
        android:id="@+id/nav_about"
        android:label="@string/menu_about"
        android:name="com.example.jokerapp.view.AboutFragment"
        xmlns:tools="http://schemas.android.com/tools"
        tools:layout="@layout/fragment_about"/>

</navigation>